--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.7.1",
     "moralis-v1": "^1.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -16,7 +17,10 @@
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "7",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
