added yarn export

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-smartcontract-lottery-fcc",
   "private": true,
   "scripts": {
+    "export": "next export",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
